docs/4.20/scalability_and_performance/managing-bare-metal-hosts.md
When you install OpenShift Container Platform on a bare-metal cluster, you can provision and manage bare-metal nodes by using `machine` and `machineset` custom resources (CRs) for bare-metal hosts that exist in the cluster.

# About bare metal hosts and nodes

To provision a Red Hat Enterprise Linux CoreOS (RHCOS) bare metal host as a node in your cluster, first create a `MachineSet` custom resource (CR) object that corresponds to the bare metal host hardware. Bare metal host compute machine sets describe infrastructure components specific to your configuration. You apply specific Kubernetes labels to these compute machine sets and then update the infrastructure components to run on only those machines.

`Machine` CR’s are created automatically when you scale up the relevant `MachineSet` containing a `metal3.io/autoscale-to-hosts` annotation. OpenShift Container Platform uses `Machine` CR’s to provision the bare metal node that corresponds to the host as specified in the `MachineSet` CR.

# Maintaining bare metal hosts

You can maintain the details of the bare metal hosts in your cluster from the OpenShift Container Platform web console. Navigate to **Compute** → **Bare Metal Hosts**, and select a task from the **Actions** drop down menu. Here you can manage items such as BMC details, boot MAC address for the host, enable power management, and so on. You can also review the details of the network interfaces and drives for the host.

You can move a bare metal host into maintenance mode. When you move a host into maintenance mode, the scheduler moves all managed workloads off the corresponding bare metal node. No new workloads are scheduled while in maintenance mode.

You can deprovision a bare metal host in the web console. Deprovisioning a host does the following actions:

1.  Annotates the bare metal host CR with `cluster.k8s.io/delete-machine: true`

2.  Scales down the related compute machine set

> [!NOTE]
> Powering off the host without first moving the daemon set and unmanaged static pods to another node can cause service disruption and loss of data.

<div>

<div class="title">

Additional resources

</div>

- [Adding compute machines to bare metal](../machine_management/user_infra/adding-bare-metal-compute-user-infra.xml#adding-bare-metal-compute-user-infra)

</div>

## Adding a bare metal host to the cluster using the web console

You can add bare metal hosts to the cluster in the web console.

<div>

<div class="title">

Prerequisites

</div>

- Install an RHCOS cluster on bare metal.

- Log in as a user with `cluster-admin` privileges.

</div>

<div>

<div class="title">

Procedure

</div>

1.  In the web console, navigate to **Compute** → **Bare Metal Hosts**.

2.  Select **Add Host** → **New with Dialog**.

3.  Specify a unique name for the new bare metal host.

4.  Set the **Boot MAC address**.

5.  Set the **Baseboard Management Console (BMC) Address**.

6.  Enter the user credentials for the host’s baseboard management controller (BMC).

7.  Select to power on the host after creation, and select **Create**.

8.  Scale up the number of replicas to match the number of available bare metal hosts. Navigate to **Compute** → **MachineSets**, and increase the number of machine replicas in the cluster by selecting **Edit Machine count** from the **Actions** drop-down menu.

</div>

> [!NOTE]
> You can also manage the number of bare metal nodes using the `oc scale` command and the appropriate bare metal compute machine set.

## Adding a bare metal host to the cluster using YAML in the web console

You can add bare metal hosts to the cluster in the web console using a YAML file that describes the bare metal host.

<div>

<div class="title">

Prerequisites

</div>

- Install a RHCOS compute machine on bare metal infrastructure for use in the cluster.

- Log in as a user with `cluster-admin` privileges.

- Create a `Secret` CR for the bare metal host.

</div>

<div>

<div class="title">

Procedure

</div>

1.  In the web console, navigate to **Compute** → **Bare Metal Hosts**.

2.  Select **Add Host** → **New from YAML**.

3.  Copy and paste the below YAML, modifying the relevant fields with the details of your host:

    ``` yaml
    apiVersion: metal3.io/v1alpha1
    kind: BareMetalHost
    metadata:
      name: <bare_metal_host_name>
    spec:
      online: true
      bmc:
        address: <bmc_address>
        credentialsName: <secret_credentials_name>
        disableCertificateVerification: True
      bootMACAddress: <host_boot_mac_address>
    ```

    - `credentialsName` must reference a valid `Secret` CR. The `baremetal-operator` cannot manage the bare metal host without a valid `Secret` referenced in the `credentialsName`. For more information about secrets and how to create them, see [Understanding secrets](../nodes/pods/nodes-pods-secrets.xml#nodes-pods-secrets-about_nodes-pods-secrets).

    - Setting `disableCertificateVerification` to `true` disables TLS host validation between the cluster and the baseboard management controller (BMC).

4.  Select **Create** to save the YAML and create the new bare metal host.

5.  Scale up the number of replicas to match the number of available bare metal hosts. Navigate to **Compute** → **MachineSets**, and increase the number of machines in the cluster by selecting **Edit Machine count** from the **Actions** drop-down menu.

    > [!NOTE]
    > You can also manage the number of bare metal nodes using the `oc scale` command and the appropriate bare metal compute machine set.

</div>

## Automatically scaling machines to the number of available bare metal hosts

To automatically create the number of `Machine` objects that matches the number of available `BareMetalHost` objects, add a `metal3.io/autoscale-to-hosts` annotation to the `MachineSet` object.

<div>

<div class="title">

Prerequisites

</div>

- Install RHCOS bare metal compute machines for use in the cluster, and create corresponding `BareMetalHost` objects.

- Install the OpenShift Container Platform CLI (`oc`).

- Log in as a user with `cluster-admin` privileges.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Annotate the compute machine set that you want to configure for automatic scaling by adding the `metal3.io/autoscale-to-hosts` annotation. Replace `<machineset>` with the name of the compute machine set.

    ``` terminal
    $ oc annotate machineset <machineset> -n openshift-machine-api 'metal3.io/autoscale-to-hosts=<any_value>'
    ```

    Wait for the new scaled machines to start.

</div>

> [!NOTE]
> When you use a `BareMetalHost` object to create a machine in the cluster and labels or selectors are subsequently changed on the `BareMetalHost`, the `BareMetalHost` object continues be counted against the `MachineSet` that the `Machine` object was created from.

## Removing bare metal hosts from the provisioner node

In certain circumstances, you might want to temporarily remove bare metal hosts from the provisioner node. For example, during provisioning when a bare metal host reboot is triggered by using the OpenShift Container Platform administration console or as a result of a Machine Config Pool update, OpenShift Container Platform logs into the integrated Dell Remote Access Controller (iDrac) and issues a delete of the job queue.

To prevent the management of the number of `Machine` objects that matches the number of available `BareMetalHost` objects, add a `baremetalhost.metal3.io/detached` annotation to the `MachineSet` object.

> [!NOTE]
> This annotation has an effect for only `BareMetalHost` objects that are in either `Provisioned`, `ExternallyProvisioned` or `Ready/Available` state.

<div>

<div class="title">

Prerequisites

</div>

- Install RHCOS bare metal compute machines for use in the cluster and create corresponding `BareMetalHost` objects.

- Install the OpenShift Container Platform CLI (`oc`).

- Log in as a user with `cluster-admin` privileges.

</div>

<div>

<div class="title">

Procedure

</div>

1.  Annotate the compute machine set that you want to remove from the provisioner node by adding the `baremetalhost.metal3.io/detached` annotation.

    ``` terminal
    $ oc annotate machineset <machineset> -n openshift-machine-api 'baremetalhost.metal3.io/detached'
    ```

    Wait for the new machines to start.

    > [!NOTE]
    > When you use a `BareMetalHost` object to create a machine in the cluster and labels or selectors are subsequently changed on the `BareMetalHost`, the `BareMetalHost` object continues be counted against the `MachineSet` that the `Machine` object was created from.

2.  In the provisioning use case, remove the annotation after the reboot is complete by using the following command:

    ``` terminal
    $ oc annotate machineset <machineset> -n openshift-machine-api 'baremetalhost.metal3.io/detached-'
    ```

</div>

<div>

<div class="title">

Additional resources

</div>

- [Expanding the cluster](../installing/installing_bare_metal/bare-metal-expanding-the-cluster.xml#bare-metal-expanding-the-cluster)

- [MachineHealthChecks on bare metal](../machine_management/deploying-machine-health-checks.xml#machine-health-checks-bare-metal_deploying-machine-health-checks)

</div>

## Powering off bare-metal hosts

You can power off bare-metal cluster hosts in the web console or by applying a patch in the cluster by using the OpenShift CLI (`oc`). Before you power off a host, you should mark the node as unschedulable and drain all pods and workloads from the node.

<div>

<div class="title">

Prerequisites

</div>

- You have installed a RHCOS compute machine on bare-metal infrastructure for use in the cluster.

- You have logged in as a user with `cluster-admin` privileges.

- You have configured the host to be managed and have added BMC credentials for the cluster host. You can add BMC credentials by applying a `Secret` custom resource (CR) in the cluster or by logging in to the web console and configuring the bare-metal host to be managed.

</div>

<div>

<div class="title">

Procedure

</div>

1.  In the web console, mark the node that you want to power off as unschedulable. Perform the following steps:

    1.  Navigate to **Nodes** and select the node that you want to power off. Expand the **Actions** menu and select **Mark as unschedulable**.

    2.  Manually delete or relocate running pods on the node by adjusting the pod deployments or scaling down workloads on the node to zero. Wait for the drain process to complete.

    3.  Navigate to **Compute** → **Bare Metal Hosts**.

    4.  Expand the **Options menu** for the bare-metal host that you want to power off, and select **Power Off**. Select **Immediate power off**.

2.  Alternatively, you can patch the `BareMetalHost` resource for the host that you want to power off by using `oc`.

    1.  Get the name of the managed bare-metal host. Run the following command:

        ``` terminal
        $ oc get baremetalhosts -n openshift-machine-api -o jsonpath='{range .items[*]}{.metadata.name}{"\t"}{.status.provisioning.state}{"\n"}{end}'
        ```

        <div class="formalpara">

        <div class="title">

        Example output

        </div>

        ``` terminal
        master-0.example.com  managed
        master-1.example.com  managed
        master-2.example.com  managed
        worker-0.example.com  managed
        worker-1.example.com  managed
        worker-2.example.com  managed
        ```

        </div>

    2.  Mark the node as unschedulable:

        ``` terminal
        $ oc adm cordon <bare_metal_host>
        ```

        - `<bare_metal_host>` is the host that you want to shut down, for example, `worker-2.example.com`.

    3.  Drain all pods on the node:

        ``` terminal
        $ oc adm drain <bare_metal_host> --force=true
        ```

        Pods that are backed by replication controllers are rescheduled to other available nodes in the cluster.

    4.  Safely power off the bare-metal host. Run the following command:

        ``` terminal
        $ oc patch <bare_metal_host> --type json -p '[{"op": "replace", "path": "/spec/online", "value": false}]'
        ```

    5.  After you power on the host, make the node schedulable for workloads. Run the following command:

        ``` terminal
        $ oc adm uncordon <bare_metal_host>
        ```

</div>
